--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="es" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title>Assignment 2</title>
+<title>Batman Campaign</title>
 <meta content="width=device-width, initial-scale=1" name="viewport">
 
 
@@ -371,13 +371,13 @@ outline-offset: 2px;
 <p>As a storied, veteran X-Men member, Ororo Munroe, AKA Storm, is one of the most powerful mutants on Earth. A trusted and wise leader of the team, with the ability to control and manipulate weather patterns, Storm creates a legacy.</p>
 </section>
 <section class="col-lg-4 col-md-6">
-<h3 class="h5"><a href="https://en.wikipedia.org/wiki/Superman" tabindex="3">SUPERMAN</a></h3>
+<h3 class="h5"><a href="https://en.wikipedia.org/wiki/Superman">SUPERMAN</a></h3>
 <p>Superman was born on the fictional planet Krypton with the birth name of Kal-El. As a baby, his parents Jor-El and Lara sent him to Earth in a small spaceship shortly before Krypton was destroyed in a natural cataclysm.</p>
 </section>
 </div>
 <div class="row wb-eqht">
 <section class="col-lg-4 col-md-6">
-<h3 class="h5"><a href="https://en.wikipedia.org/wiki/Spider-Man" tabindex="1">SPIDER MAN</a></h3>
+<h3 class="h5"><a href="https://en.wikipedia.org/wiki/Spider-Man">SPIDER MAN</a></h3>
 <p>Spider-Man is secret identity of Peter Benjamin Parker. Initially, Peter was depicted as a teenage high-school student and an orphan raised by his Aunt May and Uncle Ben in New York City after his parents, Richard and Mary Parker, died in a plane crash.</p>
 </section>
 <section class="col-lg-4 col-md-6">
@@ -385,7 +385,7 @@ outline-offset: 2px;
 <p>Following his accidental exposure to gamma rays while saving the life of Rick Jones during the detonation of an experimental bomb, Banner is physically transformed into the Hulk when subjected to emotional stress, at or against his will.</p>
 </section>
 <section class="col-lg-4 col-md-6">
-<h3 class="h5"><a href="https://en.wikipedia.org/wiki/Captain_America tabindex="2" ">CAPTAIN AMERICA</a></h3>
+<h3 class="h5"><a href="https://en.wikipedia.org/wiki/Captain_America">CAPTAIN AMERICA</a></h3>
 <p>Having appeared in more than ten thousand stories in more than five thousand media formats, Captain America is one of the most popular and recognized Marvel Comics characters, and has been described as an icon of American popular culture. </p>
 </section>
 </div>
@@ -439,7 +439,7 @@ function myFunction() {
   } else {
     x.style.display = "none";
   }
-    document.activeElement.blur();
+    //document.activeElement.blur();
 }
 </script>
 </body>
