--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ outline-offset: 2px;
 <h2 class="wb-inv">Menu</h2>
 <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
 <ul role="menu" aria-orientation="vertical">
-<li role="presentation"><a role="menuitem" href="#">Link 1</a></li>
-<li role="presentation"><a role="menuitem" href="#">Link 2</a></li>
-<li role="presentation"><a role="menuitem" href="#">Link 3</a></li>
+<li role="presentation"><a role="menuitem" href="#">Link 1</a>About Batman</li>
+<li role="presentation"><a role="menuitem" href="#">Link 2</a>Filmography</li>
+<li role="presentation"><a role="menuitem" href="#">Link 3</a>Creators & History</li>
 
 </ul>
 </nav>
@@ -131,7 +131,7 @@ outline-offset: 2px;
 
 <div class="row">
 <section class="col-md-6">
-<p>Batman is a superhero who appears in American comic books published by DC Comics. Batman was created by the artist Bob Kane and writer Bill Finger, and debuted in the 27th issue of the comic book Detective Comics on March 30, 1939. In the DC Universe, Batman is the alias of Bruce Wayne, a wealthy American playboy, philanthropist, and industrialist who resides in Gotham City. His origin story features him swearing vengeance against criminals after witnessing the murder of his parents, Thomas and Martha, as a child, a vendetta tempered by the ideal of justice. He trains himself physically and intellectually, crafts a bat-inspired persona, and monitors the Gotham streets at night. Kane, Finger, and other creators accompanied Batman with supporting characters, including his sidekicks Robin and Batgirl; allies Alfred Pennyworth and James Gordon; love interest Catwoman; and foes such as the Penguin, the Riddler, Two-Face, and his archenemy, the Joker. For source, <a href="https://en.wikipedia.org/wiki/Batman">click here </a>.</p>
+<p>Batman is a superhero who appears in American comic books published by DC Comics. Batman was created by the artist Bob Kane and writer Bill Finger, and debuted in the 27th issue of the comic book Detective Comics on March 30, 1939. In the DC Universe, Batman is the alias of Bruce Wayne, a wealthy American playboy, philanthropist, and industrialist who resides in Gotham City. His origin story features him swearing vengeance against criminals after witnessing the murder of his parents, Thomas and Martha, as a child, a vendetta tempered by the ideal of justice. He trains himself physically and intellectually, crafts a bat-inspired persona, and monitors the Gotham streets at night. Kane, Finger, and other creators accompanied Batman with supporting characters, including his sidekicks Robin and Batgirl; allies Alfred Pennyworth and James Gordon; love interest Catwoman; and foes such as the Penguin, the Riddler, Two-Face, and his archenemy, the Joker. For source, <a href="https://en.wikipedia.org/wiki/Batman">Batman on Wikipedia </a>.</p>
 </section>
 <section class="col-md-6">
 <img src="images/bobkane.gif" alt="Bob Kane wearning a hat and a jacket both decorated with batman logo" class="img-responsive thumbnail"/>
