--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ outline-offset: 2px;
 <h2 class="wb-inv">Menu</h2>
 <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
 <ul role="menu" aria-orientation="vertical">
-<li role="presentation"><a role="menuitem" href="#">Link 1</a>About Batman</li>
-<li role="presentation"><a role="menuitem" href="#">Link 2</a>Filmography</li>
-<li role="presentation"><a role="menuitem" href="#">Link 3</a>Creators & History</li>
+<li role="presentation"><a role="menuitem" href="#">About Batman</a></li>
+<li role="presentation"><a role="menuitem" href="#">Filmography</a></li>
+<li role="presentation"><a role="menuitem" href="#">Creators & History</a></li>
 
 </ul>
 </nav>
