--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ outline-offset: 2px;
 
 <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
 <h2>Search</h2>
-<form action="#" method="post" name="cse-search-box" role="search">
+<!-- <form action="#" method="post" name="cse-search-box" role="search">
 <div class="form-group wb-srch-qry">
 <label for="wb-srch-q" class="wb-inv">Search</label>
 <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Search" />
@@ -100,7 +100,12 @@ outline-offset: 2px;
 <span class="wb-inv">Search</span>
 </button>
 </div>
-</form>
+</form> -->
+
+<!-- ✅ Functional search --> 
+ <form action="/search-results.html" method="get" role="search"> 
+  <label for="wb-srch-q" class="wb-inv">Search</label> <input id="wb-srch-q" name="q" type="search" placeholder="Search Batman content" /> 
+  <button type="submit">Search</button> </form>
 </section>
 
 </div>
