--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ outline-offset: 2px;
 
 <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
 <h2>Search</h2>
-<form action="#" method="post" name="cse-search-box" role="search">
+<!-- <form action="#" method="post" name="cse-search-box" role="search">
 <div class="form-group wb-srch-qry">
 <label for="wb-srch-q" class="wb-inv">Search</label>
 <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Search" />
@@ -100,12 +100,22 @@ outline-offset: 2px;
 <span class="wb-inv">Search</span>
 </button>
 </div>
+</form> -->
+
+<form onsubmit="return searchPage();" role="search">
+  <div class="form-group wb-srch-qry">
+    <label for="wb-srch-q" class="wb-inv">Search this page</label>
+    <input id="wb-srch-q" class="wb-srch-q form-control" name="q" type="search"
+           placeholder="Search content..." />
+  </div>
+  <div class="form-group submit">
+    <button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small">
+      <span class="glyphicon-search glyphicon"></span>
+      <span class="wb-inv">Search</span>
+    </button>
+  </div>
 </form>
 
-<!-- ✅ Functional search --> 
- <!-- <form action="/search-results.html" method="get" role="search"> 
-  <label for="wb-srch-q" class="wb-inv">Search</label> <input id="wb-srch-q" name="q" type="search" placeholder="Search Batman content" /> 
-  <button type="submit">Search</button> </form> -->
 </section>
 
 </div>
@@ -300,23 +310,6 @@ outline-offset: 2px;
     <p>Description: The Batman cast is shown speaking on stage about their roles.</p>
   </figcaption>
 </figure>
-
-<!-- Video-only example -->
-<!-- <figure>
-  <video controls>
-    <source src="video/the-batman-interview.mp4" type="video/mp4">
-  </video>
-  <figcaption>Interview video: no audio track</figcaption>
-</figure> -->
-
-<!-- Audio-only example -->
-<!-- <figure>
-  <audio controls>
-    <source src="audio/the-batman-interview.mp3" type="audio/mpeg">
-  </audio>
-  <figcaption>Audio track of the Batman interview</figcaption>
-</figure> -->
-
 </div>
 
 
@@ -352,13 +345,6 @@ outline-offset: 2px;
 </section>
 </div>
 </section>
-
-
-
-
-
-
-
 
 <section>
 
@@ -445,6 +431,19 @@ function myFunction() {
     x.style.display = "none";
   }
     //document.activeElement.blur();
+}
+
+function searchPage() {
+  const query = document.getElementById('wb-srch-q').value.toLowerCase();
+  if (!query) return false;
+
+  const bodyText = document.body.innerText.toLowerCase();
+  if (bodyText.includes(query)) {
+    alert(`Found "${query}" on this page.`);
+  } else {
+    alert(`"${query}" not found on this page.`);
+  }
+  return false; // prevents reload
 }
 </script>
 </body>
