Edit the  breadcrumb

--- a/index.html
+++ b/index.html
@@ -139,14 +139,13 @@ outline-offset: 2px;
 </div>
 
 
-
 </header>
 
 <nav aria-label="Breadcrumb">
   <ol class="breadcrumb">
     <li><a href="index.html">Home</a></li>
     <li><a href="#wb-cont">Campaigns</a></li>
-    <li><a href="#becoming-a-batman">How to Become a Batman</a></li>
+    <li><a href="#becoming-a-batman" aria-current="page">How to Become a Batman</a></li>
   </ol>
 </nav>
 
