--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html class="no-js" lang="es" dir="ltr">
+<html class="no-js" lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
 <title>Batman Campaign</title>
