--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@ button {
   padding: 8px 30px 8px 30px;
   font-size: 1.5em;
   color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* First button (Register) */
+form > button:first-of-type {
+  background-color: green;
+}
+
+/* Second button (Cancel) */
+form > button:last-of-type {
+  background-color: red;
 }
 table {
 font-family: Arial, Helvetica, sans-serif;
@@ -284,8 +298,8 @@ outline-offset: 2px;
 <input type="text" id="fname" name="fname" value="John"><br>
 <label for="lname">Last name:</label><br>
 <input type="text" id="lname" name="lname" value="Doe"><br><br>
-<button class="w3-button" style="background-color:green;">Register</button>
-<button class="w3-button" style="background-color:red;">Cancel</button>
+<button class="w3-button">Register</button>
+<button class="w3-button">Cancel</button>
 </form>
 
 
