--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <noscript><link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/css/noscript.min.css" /></noscript>
 
 <style>
-button {
+.w3-button {
   padding: 8px 30px 8px 30px;
   font-size: 1.5em;
   color: white;
@@ -24,12 +24,12 @@ button {
 }
 
 /* First button (Register) */
-form > button:first-of-type {
+form > .w3-button:first-of-type {
   background-color: green;
 }
 
 /* Second button (Cancel) */
-form > button:last-of-type {
+form > .w3-button:last-of-type {
   background-color: red;
 }
 table {
@@ -79,6 +79,17 @@ outline: 3px solid rgb(255, 187, 0);
 outline-offset: 2px;	
 }
 
+.toggle-btn {
+    padding-top: 20px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+
 </style>
 
 
@@ -102,19 +113,6 @@ outline-offset: 2px;
 
 <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
 <h2>Search</h2>
-<!-- <form action="#" method="post" name="cse-search-box" role="search">
-<div class="form-group wb-srch-qry">
-<label for="wb-srch-q" class="wb-inv">Search</label>
-<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Search" />
-<datalist id="wb-srch-q-ac"></datalist>
-</div>
-<div class="form-group submit">
-<button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub">
-<span class="glyphicon-search glyphicon"></span>
-<span class="wb-inv">Search</span>
-</button>
-</div>
-</form> -->
 
 <form onsubmit="return searchPage();" role="search" aria-label="Site search">
   <div class="form-group wb-srch-qry">
@@ -417,7 +415,7 @@ outline-offset: 2px;
 </section>
 
 <p>
-<button onclick="myFunction()">More super heros</button>
+<button class="toggle-btn" onclick="myFunction()" aria-controls="myDIV" aria-expanded="false">More super heros</button>
 
 <div id="myDIV" style="display:none">
   <p>Nutrition facts</p>
@@ -473,18 +471,25 @@ outline-offset: 2px;
 <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script>
 <script>
 function myFunction() {
-  var x = document.getElementById("myDIV");
-  var toggleBtn = document.querySelector('button[onclick="myFunction()"]');
+    const x = document.getElementById("myDIV");
+    const toggleBtn = document.querySelector('button[onclick="myFunction()"]');
+    const isHidden = x.style.display === "none";
 
-  if (x.style.display === "none") {
-    x.style.display = "block";
-    x.setAttribute('tabindex', '-1'); // makes content focusable
-    x.focus(); // move focus to the revealed section
-  } else {
-    x.style.display = "none";
-    toggleBtn.focus(); // return focus to the button
+    // Toggle visibility
+    x.style.display = isHidden ? "block" : "none";
+
+    // Update aria-expanded for screen readers
+    toggleBtn.setAttribute("aria-expanded", isHidden ? "true" : "false");
+
+    if (isHidden) {
+      // Make revealed content focusable and move focus there
+      x.setAttribute("tabindex", "-1");
+      x.focus();
+    } else {
+      // Return focus to the button when hiding content
+      toggleBtn.focus();
+    }
   }
-}
 
 function searchPage() {
   // Work only inside main content to avoid altering scripts/styles
